[package]
name = "uwuifyy_dominator"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.3"
console_error_panic_hook = "0.1.7"
dominator = "0.5.32"
futures-signals = "0.3.31"
getrandom = { version = "0.2.8", features = ["js"] }
linkify = "0.9.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
  "HtmlTextAreaElement",
  "Window",
  "HtmlInputElement",
  "Clipboard",
  "Navigator"
] }

[profile.dev]
overflow-checks = false

[profile.release]
lto = true
strip = true
codegen-units = 1
